2002-08-02  Peter Osterlund  <petero2@telia.com>

	* (p4-diff2): When invoking p4-diff2 interactively, default to
	  showing the differences between the current rev and rev# minus
	  one.

	* (p4-prev-toggle-fkn): Mark for autoload, to make byte
	  compilation from the xemacs source code possible.

2002-08-01  Peter Osterlund  <petero2@telia.com>

	* Fixed some warnings during xemacs byte compilation.

2002-07-31  Peter Osterlund  <petero2@telia.com>

	* (p4-activate-print-buffer), (p4-make-depot-list-buffer): Allow
	  all characters in depot names, not just a-z and A-Z. Take
	  special care not to confuse depot path specifications with C++
	  comments.

	* (defp4cmd): Renamed def-p4-cmd to defp4cmd to make the
	  find-function function recognize it as a function definition.

	* (p4-is-vc): Removed unused variable 'max'.

2002-07-27  Peter Osterlund  <petero2@telia.com>

	* (p4-empty-diff-p): Made non-interactive.

	* (p4-toggle-read-only): Added support for off-line mode, useful
	  when you lose connection to the p4 server or if you want to
	  change a file without letting p4 know.

	* Made loading of vc package optional.

2002-07-26  Rajesh Vaidheeswarran <rv@dsmit.com>

	* (p4-diff-head): New command to diff an (un)opened
	  file against the head revision in the depot.

2002-07-26  Rajesh Vaidheeswarran <rv@dsmit.com>

	* (p4-emacs-version): Minor Release - 10.1

	* (p4-maintainer): Fix email address

	* Patch from  "Paul Krause" <pkrause@soundbite.com>
	    Update all buffers after a check-in without prompting the
	    user yes-or-no for each buffer (a very nice thing when you're
	    checking in 50 files at once).

2002-07-26  Peter Osterlund  <petero2@telia.com>

	* (p4-check-mode): Made it possible to disable the periodic file
	  modification check by setting p4-file-refresh-timer-time to 0.
	  Suggestion from Guenter Radestock.

	* (p4-refresh-files-in-buffers): Made interactive, so that it can
	  be bound to a key sequence, which can be handy if you have